Fixing home page links and avatar center alignment

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,3 +18,15 @@
 .github-repo-title {
     margin-top: 0px !important;
 }
+
+// .github-avatar-link {
+//     text-align: center;
+// }
+
+.github-avatar-image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    border-radius: 50%;
+}
